--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Online Flower Delivery | My Flowers </title>
     <meta name="description" content="Blooms Bay | Online Flower Delivery" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
 </head>
 
 <body id="page-top">
