made Blooms Bay to BloomsBay

--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="utf-8" />
+        <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>Online Flower Delivery | My Flowers</title>
+        <meta name="description" content="BloomsBay | Online Flower Delivery" />
+        <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
+    </head>
 
-<head>
-    <meta charset="utf-8" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Online Flower Delivery | My Flowers </title>
-    <meta name="description" content="Blooms Bay | Online Flower Delivery" />
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
-</head>
-
-<body id="page-top">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="flex flex-col min-h-screen text-base font-light text-gray-800 bg-white" id="root"></div>
-</body>
-
+    <body id="page-top">
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div
+            class="flex flex-col min-h-screen text-base font-light text-gray-800 bg-white"
+            id="root"
+        ></div>
+    </body>
 </html>
